events page updated and reacted messages changes done

--- a/index.html
+++ b/index.html
@@ -217,8 +217,7 @@
                                 <h1 class="font-weight-bold wow-outer"><span class="wow slideInDown"
                                         data-wow-delay=".2s">Placement Day Is Coming</span></h1>
                                 <p class="big wow-outer"><span class="wow slideInDown" data-wow-delay=".35s">Make sure
-                                        to take care of your company and your own future by hiring from our
-                                        college.</span></p>
+                                        to invest in your company's future by hiring from our college because we are addicted to learning here and proud of it.</span></p>
                                 <div class="wow-outer button-outer"><a
                                         class="button button-lg button-primary button-winona wow slideInDown"
                                         href="contact-us.html" data-wow-delay=".4s">Contact Now</a></div>
@@ -307,18 +306,10 @@
                     <div class="col-md-10 col-lg-6 col-xl-5">
                         <h3 class="wow-outer"><span class="wow slideInDown">Invitation</span></h3>
                         <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".05s">
-                                We cordially invite your esteemed organization to participate in our campus placement
-                                program starting June 2023 to consider students graduating in May 2024. The College
-                                offers 4-years BE degree Programs in Civil Engineering, Mechanical Engineering, Computer
-                                Science and Engineering, Electronics and Communication Engineering Streams.
+                            We cordially invite your esteemed organization to participate in our campus placement program starting from June 2023 for all the students graduating in May 2024. The College offers 4-year BE Degree Programs in Civil Engineering, Mechanical Engineering, Computer Science and Engineering, and Electronics and Communication Engineering Streams.
+
                             </span></p>
-                        <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".1s">The
-                                Institute has consistently produced outstanding Engineers who have excelled in their
-                                career and occupied responsible position in some of the best known enterprises in India
-                                as well as across the globe. We have been successful in maintaining our high placement
-                                statistics over the years and the fact that our students bear the recession blues with
-                                record breaking placements itself is a testimony to our quality. So, we would be happy
-                                to fix a mutually convenient date for your visit to our campus.</span></p>
+                        <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".1s">The Institute has consistently produced outstanding engineers who have excelled in their careers and occupied responsible positions in some of the best-known enterprises in India as well as across the globe. We have been successful in maintaining our high placement statistics over the years and the fact that our students bear the recession blues with record-breaking placements itself is a testimony to our quality. So, we would be happy to schedule a mutually convenient date for your visit to our campus.</span></p>
                         <div class="wow-outer button-outer"><a
                                 class="button button-lg button-primary button-winona wow slideInDown"
                                 data-wow-delay=".1s" href="past-placements.html">Learn more</a></div>
@@ -444,9 +435,9 @@
                                             <p class="text-center">The strict selection criteria facilitate that only
                                                 the best enter the
                                                 hallowed portal.
-                                                So, the upcoming aspiring Engineers all can profit from the augmented
+                                                So, the upcoming aspiring Engineers can all profit from the augmented
                                                 capacity for
-                                                learning, understanding, and thinking that can be gained in the four
+                                                learning, understanding, and thinking gained in the four
                                                 years of
                                                 Engineering. </p>
                                         </div>
@@ -455,14 +446,7 @@
                                 <div class="wow-outer">
                                     <blockquote class="quote-modern wow slideInLeft">
                                         <div class="quote-modern-text">
-                                            <p class="text-center">These students are the pearls which are found after
-                                                scaling the ocean of
-                                                over many
-                                                applicants. They are then trained and groomed to deal with the newest
-                                                and most difficult
-                                                information and concepts which will profit them most and the challenges
-                                                of the
-                                                profession.</p>
+                                            <p class="text-center">These students are the pearls that are found after scaling the ocean of many applicants. They are then trained and groomed to deal with the newest and most difficult information and concepts which will profit them the most while overcoming the  challenges of the professional world.</p>
                                         </div>
                                     </blockquote>
                                 </div>
@@ -547,31 +531,31 @@
                         <p class="wow-outer">
                             <span class="wow slideInDown" data-wow-delay=".05s">
                                 <span class="bullet-point"></span>
-                                Well-Equipped GD rooms and spacious Lecture Halls.
+                                Well-equipped GD rooms and spacious lecture halls.
                             </span>
                         </p>
                         <p class="wow-outer">
                             <span class="wow slideInDown" data-wow-delay=".1s">
                                 <span class="bullet-point"></span>
-                                Auditorium with capacity of 300 for presentation.
+                                Auditorium with a capacity of 300 for presentations.
                             </span>
                         </p>
                         <p class="wow-outer">
                             <span class="wow slideInDown" data-wow-delay=".15s">
                                 <span class="bullet-point"></span>
-                                Facilities available for online test (upto 100 students).
+                                Online testing facilities available for up to 100 students.
                             </span>
                         </p>
                         <p class="wow-outer">
                             <span class="wow slideInDown" data-wow-delay=".2s">
                                 <span class="bullet-point"></span>
-                                Student volunteers for every possible arrangements.
+                                Student volunteers available for all possible arrangements.
                             </span>
                         </p>
                         <p class="wow-outer">
                             <span class="wow slideInDown" data-wow-delay=".25s">
                                 <span class="bullet-point"></span>
-                                Well-Equipped Labs for all written as well as online tests.
+                                Well-equipped labs for both written and online tests.
                             </span>
                         </p>
                         <div class="wow-outer button-outer"><a
