--- a/past-placements.html
+++ b/past-placements.html
@@ -261,22 +261,11 @@
                         </svg>
                         <div class="quote-light-text">
                             <p class="wow-outer">
-                                <span class="wow slideInDown text-justify" data-wow-delay=".05s">Moment of truth is when
-                                    we
-                                    accept every opportunity as a learning curve in life!!!</span><br>
-                                <span class="wow slideInDown text-justify" data-wow-delay=".1s">The Placement
-                                    organization
-                                    succour us to fly
-                                    in the vast sky of
-                                    corporate world with golden colour and it is really pushing it’s best to edify the
-                                    student
-                                    community and it act as a bridge to consummate the gap between the stringent
-                                    competition in
-                                    the industry and talent available in the college. The Placement organization
-                                    believes in
-                                    propelling thought that ....</span><br>
-                                <span class="wow slideInDown text-justify" data-wow-delay=".15s">Go
-                                    confidently in the direction of your dreams!!!</span>
+                                <span class="wow slideInDown text-justify" data-wow-delay=".05s">"Moment of truth is when we accept every opportunity as a learning curve in life!" 
+                                </span><br>
+                                <span class="wow slideInDown text-justify" data-wow-delay=".1s">The placement organization help students soar to great heights in the corporate world with golden opportunities. It strives to educate the student community and acts as a bridge to close the gap between the stringent competition in the industry and the talent available in the college. The placement organization believes in the idea of propelling thoughts that.... 
+                                </span><br>
+                                <span class="wow slideInDown text-justify" data-wow-delay=".15s">Go confidently in the direction of your dreams!</span>
                             </p>
                         </div>
                     </blockquote>
