--- a/events.html
+++ b/events.html
@@ -235,119 +235,82 @@
                         data-custom-toggle="#isotope-filters" data-custom-toggle-disable-on-blur="true">Filter<span
                             class="caret"></span></button>
                     <ul class="isotope-filters-list" id="isotope-filters">
-                        <li><a class="active" data-isotope-filter="*" data-isotope-group="portfolio" href="#">All
-                                Types</a></li>
+                        <li><a class="active" data-isotope-filter="*" data-isotope-group="portfolio" href="#">All</a></li>
                         <li><a data-isotope-filter="Type 1" data-isotope-group="portfolio" href="#">Events</a></li>
-                        <li><a data-isotope-filter="Type 2" data-isotope-group="portfolio" href="#">Meetings</a></li>
-                        <li><a data-isotope-filter="Type 3" data-isotope-group="portfolio" href="#">Conferences</a></li>
+                        <li><a data-isotope-filter="Type 2" data-isotope-group="portfolio" href="#">Training</a></li>
+                        <li><a data-isotope-filter="Type 3" data-isotope-group="portfolio" href="#">Alumni</a></li>
                     </ul>
                 </div>
                 <div class="isotope isotope-responsive row" data-isotope-layout="fitRows" data-isotope-group="portfolio"
                     data-lightgallery="group">
-                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1, Type 2">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-1.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/grid-layout-1-370x256.jpg" alt=""
+                        <a class="thumbnail-classic" href="images/events/Educorp.png" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/events/Educorp.png" alt=""
                                 width="370" height="256" />
                             <div class="thumbnail-classic-caption">
-                                <p class="thumbnail-classic-title">Boston Meeting</p>
-                                <p class="thumbnail-classic-text">Boston, Events</p>
+                                <p class="thumbnail-classic-title">EduCorp</p>
+                                <p class="thumbnail-classic-text">29 March, 2023</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1, Type 2">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/events/Times.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/events/Times.jpg" alt=""
+                                width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Time Institute</p>
+                                <p class="thumbnail-classic-text">24 March, 2023</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1, Type 2">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/events/GAP 2023.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/events/GAP 2023.jpg" alt=""
+                                width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Gemini Ambassador Program (GAP)</p>
+                                <p class="thumbnail-classic-text">20 March 2023</p>
                             </div>
                             <div class="thumbnail-classic-dummy"></div>
                         </a>
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-2.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/grid-layout-2-370x256.jpg" alt=""
+                        <a class="thumbnail-classic" href="images/events/Career Cafe.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/events/Career Cafe.jpg" alt=""
                                 width="370" height="256" />
                             <div class="thumbnail-classic-caption">
-                                <p class="thumbnail-classic-title">Seattle Meeting</p>
-                                <p class="thumbnail-classic-text">Seattle, Events</p>
-                            </div>
-                            <div class="thumbnail-classic-dummy"></div>
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1">
-                        <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-3.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/grid-layout-3-370x256.jpg" alt=""
-                                width="370" height="256" />
-                            <div class="thumbnail-classic-caption">
-                                <p class="thumbnail-classic-title">The Future of Politics</p>
-                                <p class="thumbnail-classic-text">Discussion, Meeting</p>
+                                <p class="thumbnail-classic-title">Aptitude Test by Career Cafe</p>
+                                <p class="thumbnail-classic-text">15 March, 2023</p>
                             </div>
                             <div class="thumbnail-classic-dummy"></div>
                         </a>
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-4.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/grid-layout-4-370x256.jpg" alt=""
+                        <a class="thumbnail-classic" href="images/events/Training Week 2022.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/events/Training Week 2022.jpg" alt=""
                                 width="370" height="256" />
                             <div class="thumbnail-classic-caption">
-                                <p class="thumbnail-classic-title">Voter Registration</p>
-                                <p class="thumbnail-classic-text">Elections, Meeting</p>
-                            </div>
-                            <div class="thumbnail-classic-dummy"></div>
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
-                        <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-5.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/grid-layout-5-370x256.jpg" alt=""
-                                width="370" height="256" />
-                            <div class="thumbnail-classic-caption">
-                                <p class="thumbnail-classic-title">Meeting in Los Angeles</p>
-                                <p class="thumbnail-classic-text">Los Angeles, Events</p>
+                                <p class="thumbnail-classic-title">Training Week </p>
+                                <p class="thumbnail-classic-text">22 April, 2022</p>
                             </div>
                             <div class="thumbnail-classic-dummy"></div>
                         </a>
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-6.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/grid-layout-6-370x256.jpg" alt=""
+                        <a class="thumbnail-classic" href="images/events/GAP 2022.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/events/GAP 2022.jpg" alt=""
                                 width="370" height="256" />
                             <div class="thumbnail-classic-caption">
-                                <p class="thumbnail-classic-title">Political Conference 2018</p>
-                                <p class="thumbnail-classic-text">Conference, Annual</p>
-                            </div>
-                            <div class="thumbnail-classic-dummy"></div>
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
-                        <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-7.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/grid-layout-7-370x256.jpg" alt=""
-                                width="370" height="256" />
-                            <div class="thumbnail-classic-caption">
-                                <p class="thumbnail-classic-title">Democracy for Business</p>
-                                <p class="thumbnail-classic-text">Business, Meeting</p>
-                            </div>
-                            <div class="thumbnail-classic-dummy"></div>
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1">
-                        <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-8.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/grid-layout-8-370x256.jpg" alt=""
-                                width="370" height="256" />
-                            <div class="thumbnail-classic-caption">
-                                <p class="thumbnail-classic-title">Meeting with IT CEOs</p>
-                                <p class="thumbnail-classic-text">Information, Event</p>
-                            </div>
-                            <div class="thumbnail-classic-dummy"></div>
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
-                        <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-9.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/grid-layout-9-370x256.jpg" alt=""
-                                width="370" height="256" />
-                            <div class="thumbnail-classic-caption">
-                                <p class="thumbnail-classic-title">Reorganization Meeting</p>
-                                <p class="thumbnail-classic-text">Meeting, Internal</p>
+                                <p class="thumbnail-classic-title">Gemini Ambassador Program (GAP)</p>
+                                <p class="thumbnail-classic-text">4 January, 2022</p>
                             </div>
                             <div class="thumbnail-classic-dummy"></div>
                         </a>
