fix: content changes

--- a/index.html
+++ b/index.html
@@ -212,12 +212,12 @@
                         <div class="container">
                             <div class="jumbotron-classic-content">
                                 <div class="wow-outer">
-                                    <h6 class="title-decorated wow slideInLeft">Change Your Future</h6>
+                                    <h6 class="title-decorated wow slideInLeft">Exceed Expectations</h6>
                                 </div>
                                 <h1 class="font-weight-bold wow-outer"><span class="wow slideInDown"
-                                        data-wow-delay=".2s">Placement Day Is Coming</span></h1>
-                                <p class="big wow-outer"><span class="wow slideInDown" data-wow-delay=".35s">Make sure
-                                        to invest in your company's future by hiring from our college because we are addicted to learning here and proud of it.</span></p>
+                                        data-wow-delay=".2s">Placement season is here</span></h1>
+                                <p class="big wow-outer"><span class="wow slideInDown" data-wow-delay=".35s">Let's work
+                                        together in building an illuminating future for ourselves</span></p>
                                 <div class="wow-outer button-outer"><a
                                         class="button button-lg button-primary button-winona wow slideInDown"
                                         href="contact-us.html" data-wow-delay=".4s">Contact Now</a></div>
@@ -306,10 +306,19 @@
                     <div class="col-md-10 col-lg-6 col-xl-5">
                         <h3 class="wow-outer"><span class="wow slideInDown">Invitation</span></h3>
                         <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".05s">
-                            We cordially invite your esteemed organization to participate in our campus placement program starting from June 2023 for all the students graduating in May 2024. The College offers 4-year BE Degree Programs in Civil Engineering, Mechanical Engineering, Computer Science and Engineering, and Electronics and Communication Engineering Streams.
+                                We cordially invite your esteemed organization to participate in our campus placement
+                                program starting from June 2023 for all the students graduating in May 2024. The College
+                                offers 4-year BE Degree Programs in Civil Engineering, Mechanical Engineering, Computer
+                                Science and Engineering, and Electronics and Communication Engineering Streams.
 
                             </span></p>
-                        <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".1s">The Institute has consistently produced outstanding engineers who have excelled in their careers and occupied responsible positions in some of the best-known enterprises in India as well as across the globe. We have been successful in maintaining our high placement statistics over the years and the fact that our students bear the recession blues with record-breaking placements itself is a testimony to our quality. So, we would be happy to schedule a mutually convenient date for your visit to our campus.</span></p>
+                        <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".1s">The
+                                Institute has consistently produced outstanding engineers who have excelled in their
+                                careers and occupied responsible positions in some of the best-known enterprises in
+                                India as well as across the globe. We have been successful in maintaining our high
+                                placement statistics over the years and the fact that our students bear the recession
+                                blues with record-breaking placements itself is a testimony to our quality. So, we would
+                                be happy to schedule a mutually convenient date for your visit to our campus.</span></p>
                         <div class="wow-outer button-outer"><a
                                 class="button button-lg button-primary button-winona wow slideInDown"
                                 data-wow-delay=".1s" href="past-placements.html">Learn more</a></div>
@@ -422,31 +431,34 @@
                                 <div class="wow-outer">
                                     <blockquote class="quote-modern wow slideInLeft">
                                         <div class="quote-modern-text">
-                                            <p class="text-center">The students at CCET Degree Wing are handpicked from
-                                                among the brightest
-                                                minds in the
-                                                country through Joint Entrance Examination (Main) conducted by CBSE.</p>
+                                            <p class="text-center">
+                                                The Students of CCET (Degree Wing) are handpicked
+                                                brightest minds in the country, selected on the basis of their rank in
+                                                Joint Entrance Exam conducted by NTA.
+                                            </p>
                                         </div>
                                     </blockquote>
                                 </div>
                                 <div class="wow-outer">
                                     <blockquote class="quote-modern wow slideInLeft">
                                         <div class="quote-modern-text">
-                                            <p class="text-center">The strict selection criteria facilitate that only
-                                                the best enter the
-                                                hallowed portal.
-                                                So, the upcoming aspiring Engineers can all profit from the augmented
-                                                capacity for
-                                                learning, understanding, and thinking gained in the four
-                                                years of
-                                                Engineering. </p>
+                                            <p class="text-center">
+                                                The selection criteria facilitate that only the best enters the
+                                                institution.During this span of four years, the objective is to create
+                                                the finest engineer minds skilled with well understood concepts and
+                                                critical thinking.
+                                            </p>
                                         </div>
                                     </blockquote>
                                 </div>
                                 <div class="wow-outer">
                                     <blockquote class="quote-modern wow slideInLeft">
                                         <div class="quote-modern-text">
-                                            <p class="text-center">These students are the pearls that are found after scaling the ocean of many applicants. They are then trained and groomed to deal with the newest and most difficult information and concepts which will profit them the most while overcoming the  challenges of the professional world.</p>
+                                            <p class="text-center">
+                                                These students are crafted under proper guidance and professional
+                                                training . They are skilled with latest technology and vast knowledge to
+                                                innovate and create the solution for the day to day problems.
+                                            </p>
                                         </div>
                                     </blockquote>
                                 </div>
@@ -465,7 +477,7 @@
                                 <div class="wow-outer">
                                     <blockquote class="quote-modern wow slideInLeft">
                                         <div class="quote-modern-text">
-                                            <p class="text-center">All the departments have experienced faculty member
+                                            <p class="text-center">All the departments have experienced faculty members
                                                 for each subject to cater to the needs of the students for both
                                                 theoretical inputs and practical applications.</p>
                                         </div>
@@ -474,10 +486,20 @@
                                 <div class="wow-outer">
                                     <blockquote class="quote-modern wow slideInLeft">
                                         <div class="quote-modern-text">
-                                            <p class="text-center">The faculty members, with years of experience in
-                                                grooming future engineers, always encourage students to raise their
-                                                doubts so that students can have a complete understanding of the
-                                                subject.</p>
+                                            <p class="text-center">
+                                                With years of experience in
+                                                grooming future engineers, the faculty members aim to fulfill need of
+                                                their students in both theoretical and practical aspects.</p>
+                                        </div>
+                                    </blockquote>
+                                </div>
+                                <div class="wow-outer">
+                                    <blockquote class="quote-modern wow slideInLeft">
+                                        <div class="quote-modern-text">
+                                            <p class="text-center">
+                                                The faculty members support intellectual thinking and
+                                                encourage students towards innovative ideas for better implementation of
+                                                engineering concepts.</p>
                                         </div>
                                     </blockquote>
                                 </div>
@@ -498,20 +520,21 @@
                                     <blockquote class="quote-modern wow slideInLeft">
                                         <div class="quote-modern-text">
                                             <p class="text-center">The institution is affiliated to Panjab University,
-                                                Chandigarh. Panjab University and its affiliated colleges are presently
-                                                ranked FIRST in India and in top 250 around the world according to the
-                                                UK based Times Higher Education’s(THE) and Thomas Reuter’s World
-                                                University Rankings Survey 2013-14.</p>
+                                                Chandigarh. Panjab University has acquired first position in India and
+                                                among top 250 in the world under the ranking survey done by Times Higher
+                                                Education (THE powered by Thomson Reuters) World University 2013-2014.
+                                            </p>
                                         </div>
                                     </blockquote>
                                 </div>
                                 <div class="wow-outer">
                                     <blockquote class="quote-modern wow slideInLeft">
                                         <div class="quote-modern-text">
-                                            <p class="text-center">The curriculum of BE has been designed (Panjab
-                                                University) with such exhaustive deliberations and discussions with the
-                                                engineering experts and professionals so as to make the curriculum most
-                                                closely aligned with the needs and demands of the industry.</p>
+                                            <p class="text-center">
+                                                The curriculum of BE is designed under the guidance of engineering
+                                                experts and professionals to make sure that curriculum must align with
+                                                the needs and demands of the industries.
+                                            </p>
                                         </div>
                                     </blockquote>
                                 </div>
@@ -555,7 +578,7 @@
                         <p class="wow-outer">
                             <span class="wow slideInDown" data-wow-delay=".25s">
                                 <span class="bullet-point"></span>
-                                Well-equipped labs for both written and online tests.
+                                Well-equipped labs for both written and online tests.
                             </span>
                         </p>
                         <div class="wow-outer button-outer"><a
@@ -656,8 +679,9 @@
                     <!-- Rights-->
                     <p class="rights text-center"><span>&copy;&nbsp;</span><span
                             class="copyright-year"></span><span>&nbsp;</span><span>All Rights
-                            Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by
-                        Training and Placement Cell CCET
+                            Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by Training and
+            Placement Cell CCET |
+            <a href="webmasters.html" class="text-primary">Webmasters</a>
                 </div>
             </div>
         </footer>
