--- a/our-alumni.html
+++ b/our-alumni.html
@@ -1384,8 +1384,9 @@
                     <!-- Rights-->
                     <p class="rights text-center"><span>&copy;&nbsp;</span><span
                             class="copyright-year"></span><span>&nbsp;</span><span>All Rights
-                            Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by
-                        Training and Placement Cell CCET
+                            Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by Training and
+            Placement Cell CCET |
+            <a href="webmasters.html" class="text-primary">Webmasters</a>
                 </div>
             </div>
         </footer>
