--- a/past-placements.html
+++ b/past-placements.html
@@ -261,11 +261,18 @@
                         </svg>
                         <div class="quote-light-text">
                             <p class="wow-outer">
-                                <span class="wow slideInDown text-justify" data-wow-delay=".05s">"Moment of truth is when we accept every opportunity as a learning curve in life!" 
+                                <span class="wow slideInDown text-justify" data-wow-delay=".05s">"The moment of truth is
+                                    when we accept every opportunity as a learning curve in life!!"
                                 </span><br>
-                                <span class="wow slideInDown text-justify" data-wow-delay=".1s">The placement organization help students soar to great heights in the corporate world with golden opportunities. It strives to educate the student community and acts as a bridge to close the gap between the stringent competition in the industry and the talent available in the college. The placement organization believes in the idea of propelling thoughts that.... 
+                                <span class="wow slideInDown text-justify" data-wow-delay=".1s">
+                                    The Placement organization succors us to fly in the vast sky of the corporate world
+                                    with a golden color and it is pushing its best to edify the student community.
+                                    It acts as a bridge to consummate the gap between the stringent competition in
+                                    the industry and talent available in the college. The Placement organization
+                                    believes in propelling thought that ....
                                 </span><br>
-                                <span class="wow slideInDown text-justify" data-wow-delay=".15s">Go confidently in the direction of your dreams!</span>
+                                <span class="wow slideInDown text-justify" data-wow-delay=".15s">Go confidently in the
+                                    direction of your dreams!</span>
                             </p>
                         </div>
                     </blockquote>
@@ -848,8 +855,9 @@
                     <!-- Rights-->
                     <p class="rights text-center"><span>&copy;&nbsp;</span><span
                             class="copyright-year"></span><span>&nbsp;</span><span>All Rights
-                            Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by
-                        Training and Placement Cell CCET
+                            Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by Training and
+            Placement Cell CCET |
+            <a href="webmasters.html" class="text-primary">Webmasters</a>
                 </div>
             </div>
         </footer>
