--- a/contact-us.html
+++ b/contact-us.html
@@ -291,6 +291,28 @@
                           name="phone" data-constraints="@PhoneNumber @Required">
                       </div>
                     </div>
+                    <div class="col-md-12 wow-outer">
+                      <label class="form-label-outside" for="communication">Preferred Mode of Communication</label>
+                      <select class="form-input" id="communication" name="communication">
+                        <option value="" disabled selected>Select</option>
+                        <option value="email">Email</option>
+                        <option value="phone">Phone</option>
+                      </select>
+                    </div>
+                    <div class="col-md-12 wow-outer">
+                      <!-- radio buttons for asking if they offer internships -->
+                      <label class="form-label-outside" for="internship">Do you offer Internships?</label>
+
+                      <div class="d-flex col-md-6">
+                        <input type="radio" name="internship" value="yes" id="internshipInput1" />
+                        <label for="internshipInput1" class="pl-2">Yes</label>
+                      </div>
+
+                      <div class="d-flex col-md-6">
+                        <input type="radio" name="internship" value="no" id="internshipInput2" />
+                        <label for="internshipInput2" class="pl-2">No</label>
+                      </div>
+                    </div>
                     <div class="col-md-6 wow-outer">
                       <div class="form-wrap wow fadeSlideInUp">
                         <label class="form-label-outside" for="contact-message">Message</label>
@@ -301,16 +323,16 @@
                     <div class="col-md-6 wow-outer">
                       <div class="form-wrap wow fadeSlideInUp">
                         <br><b>Select Branches</b><br>
-                        <input type="checkbox" name="branches" value="CSE" id="branchInput1" />
+                        <input type="checkbox" class="ml-2" name="branches" value="CSE" id="branchInput1" />
                         <label for="branchInput1">CSE</label><br>
 
-                        <input type="checkbox" name="branches" value="ECE" id="branchInput2" />
+                        <input type="checkbox" class="ml-2" name="branches" value="ECE" id="branchInput2" />
                         <label for="branchInput2">ECE</label><br>
 
-                        <input type="checkbox" name="branches" value="Mechanical" id="branchInput3" />
+                        <input type="checkbox" class="ml-2" name="branches" value="Mechanical" id="branchInput3" />
                         <label for="branchInput3">Mechanical</label><br>
 
-                        <input type="checkbox" name="branches" value="Civil" id="branchInput4" />
+                        <input type="checkbox" class="ml-2" name="branches" value="Civil" id="branchInput4" />
                         <label for="branchInput4">Civil</label><br>
                       </div>
                     </div>
@@ -338,7 +360,7 @@
           </div>
         </div>
         <div class="cell-xl-5 height-fill wow fadeIn">
-          <div class="google-map-contactus">
+          <div class="google-map-contactus align-items-center">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3429.670687880303!2d76.80669671461061!3d30.72765699292929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390fed212e27c319%3A0x491b3277baba3581!2sChandigarh%20College%20Of%20Engineering%20and%20Technology%20Degree%20Wing!5e0!3m2!1sen!2sin!4v1678607473581!5m2!1sen!2sin"
               width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -934,8 +956,9 @@
             <!-- Rights-->
             <p class="rights text-center"><span>&copy;&nbsp;</span><span
                 class="copyright-year"></span><span>&nbsp;</span><span>All Rights
-                Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by
-              Training and Placement Cell CCET
+                Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by Training and
+              Placement Cell CCET |
+              <a href="webmasters.html" class="text-primary">Webmasters</a>
           </div>
         </div>
       </footer>
