Event and testimonials added

--- a/our-alumni.html
+++ b/our-alumni.html
@@ -355,6 +355,18 @@
                             <img class="wow slideInLeft" src="images/Testimonials/Sahil Puri.jpg" alt="" width="96"
                                 height="96" />
                         </div>
+                        <div class="item wow-outer">
+                            <img class="wow slideInLeft" src="images/Testimonials/Haider.jpg" alt="" width="96"
+                                height="96" />
+                        </div>
+                        <div class="item wow-outer">
+                            <img class="wow slideInLeft" src="images/Testimonials/Hemani Sharma.jpg" alt="" width="96"
+                                height="96" />
+                        </div>
+                        <div class="item wow-outer">
+                            <img class="wow slideInLeft" src="images/Testimonials/Abhilaksh .jpg" alt="" width="96"
+                                height="96" />
+                        </div>
                     </div>
                     <!-- Slick Carousel-->
                     <div class="slick-slider carousel-parent" data-arrows="false" data-loop="true" data-dots="false"
@@ -858,6 +870,64 @@
                                         passionate individuals I have ever had the pleasure of learning from. They were
                                         always willing to go above and beyond to ensure that I had the tools and
                                         resources I needed to succeed in my studies and professional development.</p>
+                                </div>
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
+                                        src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
+                                </div> -->
+                            </blockquote>
+                        </div>
+                        <div class="item">
+                            <!-- Quote Light 3-->
+                            <blockquote class="quote-light">
+                                <cite class="quote-light-cite">Haider Fareed Qureshi</cite>
+                                <p class="quote-light-caption">Melior Structural Solutions</p>
+                                <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px"
+                                    viewbox="0 0 35 25">
+                                    <path
+                                        d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
+                                    </path>
+                                </svg>
+                                <div class="quote-light-text">
+                                    <p>I am Haider Fareed Qureshi from Civil Engineering Department. Both CCET & TPC has played a significant role in helping me secure a placement at Melior Structural Solutions as a Structural Engineer. I Sincerely want to thank TPC of the college for setting a smooth track since my very beginning of this journey. It was the faculty's effort that landed me towards introduction to such prestigious institutions. I am obligated to all the members of TPC and my college staff for bringing out the best in me at every stage.</p>
+                                </div>
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
+                                        src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
+                                </div> -->
+                            </blockquote>
+                        </div>
+                        <div class="item">
+                            <!-- Quote Light 3-->
+                            <blockquote class="quote-light">
+                                <cite class="quote-light-cite">Hemani Sharma</cite>
+                                <p class="quote-light-caption">Jaro Education</p>
+                                <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px"
+                                    viewbox="0 0 35 25">
+                                    <path
+                                        d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
+                                    </path>
+                                </svg>
+                                <div class="quote-light-text">
+                                    <p>CCET enthuses the Dreams in You. <br> <br>
+                                        My life at CCET has been full of varied yer rich experiences and it has provided me with a platform to learn and grow, where we can explore without any hesitation. THey provifr Unprecended Support to us! <br> <br> The Training and Placement cell of CCET had put in a lot of effort, bringing to us the Best Companies in the Industry. THey helped me get placed in India's leading Ed-Tech company, Jaro Education where I'm currently working. THe guidance from our placement cell and the faculty members definitely helped me a lot in getting placed in JARO EDUCATION.</p>
+                                </div>
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
+                                        src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
+                                </div> -->
+                            </blockquote>
+                        </div>
+                        <div class="item">
+                            <!-- Quote Light 3-->
+                            <blockquote class="quote-light">
+                                <cite class="quote-light-cite">Abhilaksh Jit Singh</cite>
+                                <p class="quote-light-caption">Jaro Education</p>
+                                <svg class="quote-light-mark" x="0px" y="0px" width="35px" height="25px"
+                                    viewbox="0 0 35 25">
+                                    <path
+                                        d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
+                                    </path>
+                                </svg>
+                                <div class="quote-light-text">
+                                    <p>I'm Abhilaksh Jit Singh from Civil Engineering department (2016-2020). I'm working at Jaro Education with a package of 12 LPA. CCET has shaped me in these four years and TPC has been instrumental in providing me with the placement opportunity. I'm gratefl to the institute for taking me where I am today, it has been a great journey.</p>
                                 </div>
                                 <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
