--- a/events.html
+++ b/events.html
@@ -291,6 +291,18 @@
                             <div class="thumbnail-classic-dummy"></div>
                         </a>
                     </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/events/Alumni Week.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/events/Alumni Week.jpg" alt=""
+                                width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Alumni Week </p>
+                                <p class="thumbnail-classic-text">9-13 May, 2022</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
                         <!-- Thumbnail Classic-->
                         <a class="thumbnail-classic" href="images/events/Training Week 2022.jpg" data-lightgallery="item"><img
