All filter in events removed

--- a/events.html
+++ b/events.html
@@ -235,7 +235,7 @@
                         data-custom-toggle="#isotope-filters" data-custom-toggle-disable-on-blur="true">Filter<span
                             class="caret"></span></button>
                     <ul class="isotope-filters-list" id="isotope-filters">
-                        <li><a class="active" data-isotope-filter="*" data-isotope-group="portfolio" href="#">All</a></li>
+                        <!-- <li><a class="active" data-isotope-filter="*" data-isotope-group="portfolio" href="#">All</a></li> -->
                         <li><a data-isotope-filter="Type 1" data-isotope-group="portfolio" href="#">Events</a></li>
                         <li><a data-isotope-filter="Type 2" data-isotope-group="portfolio" href="#">Training</a></li>
                         <li><a data-isotope-filter="Type 3" data-isotope-group="portfolio" href="#">Alumni</a></li>
