--- a/contact-us.html
+++ b/contact-us.html
@@ -258,7 +258,7 @@
           <div class="row">
             <div class="col-lg-9 cell-inner">
               <div class="section-lg" style="padding: 25px 0px 70px 0px;">
-                <h3 class="wow-outer"><span class="wow slideInDown">Invitation to Campus Placement</span></h3>
+                <h3 class="wow-outer"><span class="wow slideInDown">Register for Campus Placement</span></h3>
                 <!-- RD Mailform-->
                 <form class="rd-form rd-mailform" data-form-output="form-output-global" data-form-type="contact"
                   method="post" autocomplete="off" name="company-registration">
