extra files removed

--- a/contact-us.html
+++ b/contact-us.html
@@ -360,7 +360,7 @@
           </div>
         </div>
         <div class="cell-xl-5 height-fill wow fadeIn">
-          <div class="google-map-contactus align-items-center">
+          <div class="google-map-contactus">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3429.670687880303!2d76.80669671461061!3d30.72765699292929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390fed212e27c319%3A0x491b3277baba3581!2sChandigarh%20College%20Of%20Engineering%20and%20Technology%20Degree%20Wing!5e0!3m2!1sen!2sin!4v1678607473581!5m2!1sen!2sin"
               width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
