--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 <!-- Profile Modern-->
                 <article class="profile-modern">
                     <div class="profile-modern-figure">
-                        <img class="profile-modern-image" src="images/kg-sharma2.jpeg" alt="" width="336px"
+                        <img class="profile-modern-image" src="images/kg-sharma.jpeg" alt="" width="336px"
                             height="336px" />
                         <!-- <a class="profile-modern-button" href="#">
                             <span class="icon mdi mdi-facebook-messenger"></span>
